syntax = "proto3";

package schema;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "schema/defs.proto";


option go_package = "github.com/nova38/Thesis/lib/biochain/schemav1";

// AC helpers

enum Role {
  ROLE_PUBLIC_UNSPECIFIED = 0;
  ROLE_STUDENT = 1;
  ROLE_ASSISTANT = 2;
  ROLE_CURATOR = 3;
  ROLE_MANAGER = 4;
}

message LastModified {
  User.Id user_id = 1;
  string user_name = 2;
  string tx_id = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message Action {
  enum Level {
    LEVEL_UNSPECIFIED = 0;
    LEVEL_VIEW = 1;
    LEVEL_EDIT = 2;
    LEVEL_SUGGEST_EDIT = 3;
    LEVEL_SUGGEST_APPROVE = 4;
    LEVEL_SUGGEST_REJECT = 5;

    LEVEL_CREATE = 6;
    LEVEL_DELETE = 7;
    LEVEL_HIDE_TX = 8;

    LEVEL_INIT = 9;
  }

  enum Domain {
    DOMAIN_UNSPECIFIED = 0;
    DOMAIN_ROLES = 1;
    DOMAIN_USERS = 2;
    DOMAIN_SPECIMEN = 3;
    DOMAIN_PRIMARY = 4;
    DOMAIN_SECONDARY = 5;
    DOMAIN_TAXON = 6;
    DOMAIN_GEOREFERENCE = 7;
    DOMAIN_IMAGES = 8;
    DOMAIN_LOANS = 9;
    DOMAIN_GRANTS = 10;

    DOMAIN_COLLECTION = 11;
  }
  Action.Level level = 1;
  repeated Action.Domain domains = 2;
}

// --------------------------------------------------
// Collection
// --------------------------------------------------
message Collection {
  message Id {
    string collection_id = 1 [(buf.validate.field).string.min_len = 1];
  }
  message List {
    repeated Collection items = 1;
  }

  message AccessControl {
    message AccessControlActions {
      repeated Role view = 1 [(buf.validate.field).repeated.min_items = 1];
      repeated Role edit = 2 [(buf.validate.field).repeated.min_items = 1];
    }
    message SpecimenActions {
      repeated Role view = 1 [(buf.validate.field).repeated.min_items = 1];
      repeated Role create = 2 [(buf.validate.field).repeated.min_items = 1];
      repeated Role delete = 3 [(buf.validate.field).repeated.min_items = 1];
      repeated Role hide_tx = 4 [(buf.validate.field).repeated.min_items = 1];
      //      repeated Role suggest = 4 [(buf.validate.field).repeated.min_items = 1];
    }
    message SectionActions {
      repeated Role view = 1 [(buf.validate.field).repeated.min_items = 1];
      repeated Role edit = 2 [(buf.validate.field).repeated.min_items = 1];
      repeated Role suggest_edit = 3 [(buf.validate.field).repeated.min_items = 1];
      repeated Role suggest_approve = 4 [(buf.validate.field).repeated.min_items = 1];
      repeated Role suggest_reject = 5 [(buf.validate.field).repeated.min_items = 1];
    }

    //
    // @property {array} The roles that can edit the privileges of the roles.
    //
    AccessControlActions roles = 1 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the roles of the users.
    AccessControlActions users = 2 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the specimens entries.
    SpecimenActions specimen = 3 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the primary section.
    SectionActions primary = 4 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the secondary section.
    SectionActions secondary = 5 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the taxon section.
    SectionActions taxon = 6 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the georeference section.
    SectionActions georeference = 7 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the images section.
    SectionActions images = 8 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the loans section.
    SectionActions loans = 9 [(buf.validate.field).required = true];
    // @property {array} The roles that can edit the grants section.
    SectionActions grants = 10 [(buf.validate.field).required = true];
  }

  // buf:lint:ignore FIELD_SAME_JSON_NAME
  Id id = 1;
  AccessControl access_control = 2 [(buf.validate.field).required = true];
}

message CollectionList {
  repeated Collection items = 1;
}

// --------------------------------------------------
// Users
// --------------------------------------------------

message User {
  option (namespace) = "users";

  // The key for the ledger
  message Id {
    string msp_id = 1 [(buf.validate.field).string.min_len = 1];
    string id = 2 [(buf.validate.field).string.min_len = 1];
  }
  message List {
    repeated User items = 1;
  }

  Id id = 1 [(buf.validate.field).required = true];

  string name = 2 [(buf.validate.field).string.min_len = 1];
  string email = 3 [(buf.validate.field).string.email = true];
  string affiliation = 4;

  // Key is the collectionID
  map<string, Role> memberships = 5;
}

// --------------------------------------------------
// Specimen
// --------------------------------------------------



message Specimen {
  option (namespace) = "specimen";

  


  message Id {
    string collection_id = 1 [(buf.validate.field).string.min_len = 1];
    string id = 2 [(buf.validate.field).string.uuid = true];
  }

  message List {
    repeated Specimen items = 1;
  }

  message History {
    message Entry {
      string tx_id = 1;
      google.protobuf.Timestamp timestamp = 2;
      bool is_deleted = 3;
      bool is_hidden = 4;
      Specimen state = 5;
    }

    Specimen.Id id = 1 [(buf.validate.field).required = true];
    repeated Entry entries = 2;
  }

  message Primary {
    string catalog_number = 1;
    string accession_number = 2;
    string field_number = 3;
    string tissue_number = 4;

    string cataloger = 5;
    string collector = 6;
    string determiner = 7;

    google.protobuf.Timestamp field_date = 8;
    google.protobuf.Timestamp catalog_date = 9;
    google.protobuf.Timestamp determined_date = 10;
    // string collection_date = 4;
    string determined_reason = 11;

    LastModified last_modified = 20;
  }

  message Secondary {
    string preparation = 3;
    string condition = 4;
    string notes = 5;

    LastModified last_modified = 20;
  }

  message Taxon {
    string kingdom = 1;
    string phylum = 2;
    string class = 3;
    string order = 4;
    string family = 5;
    string genus = 6;
    string species = 7;
    string subspecies = 8;
    LastModified last_modified = 20;
  }
  message Georeference {
    string country = 1;
    string state_province = 2;
    string county = 3;
    string locality = 4;
    string latitude = 5;
    string longitude = 6;
    string habitat = 7;
    repeated string notes = 8;
    LastModified last_modified = 10;
  }

  // Mapped Types
  message Image {
    string id = 1;
    string url = 2;
    string notes = 3;
    string hash = 4;
    LastModified last_modified = 20;
  }

  message HiddenTx {
    string tx_id = 1;
    string notes = 2;

    // @prop Set this to a cleared struct to ignore this field in updates
    LastModified last_modified = 20 [(buf.validate.field).required = true];
  }

  //  message Loan {
  //    string id = 1;
  //    string description = 2;
  //    string loaned_by = 3;
  //    string loaned_to = 4;
  //    google.protobuf.Timestamp loaned_date = 5;
  //  }
  //
  //  message Grant {
  //    string id = 1;
  //    string description = 2;
  //    string granted_by = 3;
  //    string granted_to = 4;
  //    google.protobuf.Timestamp granted_date = 5;
  //  }

  Id id = 1 [(buf.validate.field).required = true];

  Primary primary = 3 [(buf.validate.field).required = true];
  Secondary secondary = 4 [(buf.validate.field).required = true];
  Taxon taxon = 5 [(buf.validate.field).required = true];
  Georeference georeference = 6 [(buf.validate.field).required = true];

  map<string, Image> images = 7;
  string loans = 8;
  string grants = 9;

  //  map<string, Loan> loans = 8;
  //  map<string, Grant> grants = 9;
  map<string, HiddenTx> hidden_txs = 10;

  LastModified last_modified = 20;
}

// --------------------------------------------------
// Suggested
// --------------------------------------------------

message SuggestedUpdate {
  message Id {
    Specimen.Id specimen_id = 1 [(buf.validate.field).required = true];
    string id = 2 [(buf.validate.field).string.uuid = true];
  }

  Id id = 1 [(buf.validate.field).required = true];

  User.Id suggested_by = 3;
  // set in the chaincode
  google.protobuf.Timestamp suggested_date = 4;
  string suggested_reason = 5;

  Specimen.Primary primary = 6;
  Specimen.Secondary secondary = 7;
  Specimen.Taxon taxon = 8;
  Specimen.Georeference georeference = 9;
  string loans = 10;
  string grants = 11;
}

message SuggestedStateList {
  repeated SuggestedUpdate items = 1;
}
